最新状態を登録

--- a/notebooks/ch04_05_tuing.ipynb
+++ b/notebooks/ch04_05_tuing.ipynb
@@ -22,13 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "UgT4X9sQ6AFR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib->japanize-matplotlib) (1.14.0)\r\n"
+     ]
+    }
+   ],
    "source": [
     "# 日本語化ライブラリ導入\n",
     "!pip install japanize-matplotlib | tail -n 1"
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -110,13 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "xxmA-i9u6AFa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(569, 30)\n",
+      "(512, 30)\n",
+      "(57, 30)\n"
+     ]
+    }
+   ],
    "source": [
     "# サンプルデータの分割\n",
     "\n",
@@ -147,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -164,6 +182,7 @@
     "\n",
     "# サポートベクターマシン(カーネル)\n",
     "from sklearn.svm import SVC\n",
+    "# kernel='rbf' はガウスカーネル\n",
     "algorithm2 = SVC(kernel='rbf', random_state=random_seed)\n",
     "\n",
     "# 決定木\n",
@@ -185,13 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "pYNYBRO26AFg"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score: 0.9474  LogisticRegression\n",
+      "score: 0.8947  SVC\n",
+      "score: 0.9474  DecisionTreeClassifier\n",
+      "score: 0.9298  RandomForestClassifier\n",
+      "score: 0.9825  XGBClassifier\n"
+     ]
+    }
+   ],
    "source": [
     "# 複数アルゴリズムで精度比較\n",
     "for algorithm in algorithms:\n",
@@ -221,28 +252,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "EPRlb_QU6AFj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC(random_state=123)\n"
+     ]
+    }
+   ],
    "source": [
     "# デフォルトパラメータの確認\n",
     "algorithm = SVC(kernel='rbf', random_state=random_seed)\n",
-    "print(algorithm)"
+    "print(algorithm)\n",
+    "\n",
+    "# p181 \n",
+    "# SVCの場合、徳にパフォーマンスに影響するパラメータは gamma と C\n",
+    "# 最初に gamma の最適値を求め、次に C の最適値を求める"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "BLjgd4gK6AFl"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score: 0.6316  gamma: 1\n",
+      "score: 0.6316  gamma: 0.1\n",
+      "score: 0.6316  gamma: 0.01\n",
+      "score: 0.9474  gamma: 0.001\n",
+      "score: 0.9474  gamma: 0.0001\n",
+      "score: 0.9474  gamma: 1e-05\n"
+     ]
+    }
+   ],
    "source": [
     "# gammaの最適化\n",
     "algorithm = SVC(kernel='rbf', random_state=random_seed)\n",
@@ -257,13 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uGDQaEq96AFn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score: 0.9474  C: 1\n",
+      "score: 0.9298  C: 10\n",
+      "score: 0.9298  C: 100\n",
+      "score: 0.9298  C: 1000\n",
+      "score: 0.9298  C: 10000\n"
+     ]
+    }
+   ],
    "source": [
     "# Cの最適化\n",
     "# gammaは先ほど調べた最適値 0.001を採用\n",
@@ -290,13 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "S4CcnHml6AFq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "平均スコア: 0.9141  個別スコア: [0.8889 0.9181 0.9353]\n"
+     ]
+    }
+   ],
    "source": [
     "# 特定のアルゴリズムに対して交差検定を実施\n",
     "\n",
@@ -322,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -354,13 +430,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8PP4Yrca6AFu"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "平均スコア: 0.9473  個別スコア: [0.9415 0.9474 0.9529]  LogisticRegression\n",
+      "平均スコア: 0.9141  個別スコア: [0.8889 0.9181 0.9353]  SVC\n",
+      "平均スコア: 0.9062  個別スコア: [0.8713 0.9415 0.9059]  DecisionTreeClassifier\n",
+      "平均スコア: 0.9629  個別スコア: [0.9649 0.9591 0.9647]  RandomForestClassifier\n",
+      "平均スコア: 0.9570  個別スコア: [0.9474 0.9649 0.9588]  XGBClassifier\n"
+     ]
+    }
+   ],
    "source": [
     "# 複数アルゴリズムで精度を比較\n",
     "\n",
@@ -390,13 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "mRqBCMWY6AFx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC(C=1000, gamma=1e-05, random_state=123)\n"
+     ]
+    }
+   ],
    "source": [
     "# グリッドサーチを交差検定を組み合わせて最適なパラメータを探索\n",
     "params = {\n",
@@ -420,13 +516,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 1 1 0 1 1 1 0 1 0 0 1 1 1 1 0 1 1 1 0 1 0 0 1 1 0 0 0 1 1 1 1 1 0 1\n",
+      " 0 1 1 1 1 1 1 0 1 1 1 0 1 1 1 1 0 0 0 1]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(best_pred)\n",
+    "print(type(best_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "1JGcbbf16AFz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "スコア: 0.9825\n",
+      "\n",
+      "混同行列\n",
+      "[[20  1]\n",
+      " [ 0 36]]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "# 精度の取得\n",
     "score = best.score(x_test, y_test)\n",
@@ -436,7 +565,8 @@
     "from sklearn.metrics import confusion_matrix\n",
     "print()\n",
     "print('混同行列')\n",
-    "print(confusion_matrix(y_test, best_pred))"
+    "print(confusion_matrix(y_test, best_pred))\n",
+    "print(type(confusion_matrix(y_test, best_pred)))"
    ]
   },
   {
@@ -472,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
