最新状態を登録

--- a/notebooks/ch05_01_bank.ipynb
+++ b/notebooks/ch05_01_bank.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib->japanize-matplotlib) (1.14.0)\r\n"
+      "Requirement already satisfied: six>=1.5 in /home/koji/.local/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->japanize-matplotlib) (1.12.0)\r\n"
      ]
     }
    ],
@@ -143,16 +143,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-02-18 05:48:52--  https://archive.ics.uci.edu/ml/machine-learning-databases/00222/bank.zip\n",
+      "--2023-06-08 22:11:05--  https://archive.ics.uci.edu/ml/machine-learning-databases/00222/bank.zip\n",
       "archive.ics.uci.edu (archive.ics.uci.edu) をDNSに問いあわせています... 128.195.10.252\n",
       "archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443 に接続しています... 接続しました。\n",
-      "HTTP による接続要求を送信しました、応答を待っています... 200 OK\n",
-      "長さ: 579043 (565K) [application/x-httpd-php]\n",
-      "`bank.zip.1' に保存中\n",
-      "\n",
-      "bank.zip.1          100%[===================>] 565.47K   547KB/s    in 1.0s    \n",
-      "\n",
-      "2023-02-18 05:48:54 (547 KB/s) - `bank.zip.1' へ保存完了 [579043/579043]\n",
+      "HTTP による接続要求を送信しました、応答を待っています... 404 Not Found\n",
+      "2023-06-08 22:11:05 エラー 404: Not Found。\n",
       "\n",
       "Archive:  bank.zip\n",
       "  inflating: bank-full.csv           \n",
@@ -408,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2231,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2266,11 +2261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "mq2hl4maDD6h"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
