--- a/notebooks/ch05_02_bike_sharing.ipynb
+++ b/notebooks/ch05_02_bike_sharing.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib->japanize-matplotlib) (1.14.0)\r\n"
+      "Requirement already satisfied: six>=1.5 in /home/koji/.local/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->japanize-matplotlib) (1.12.0)\r\n"
      ]
     }
    ],
@@ -158,18 +158,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-02-18 06:36:31--  https://archive.ics.uci.edu/ml/machine-learning-databases/00275/Bike-Sharing-Dataset.zip\n",
+      "--2023-06-08 22:13:09--  https://archive.ics.uci.edu/ml/machine-learning-databases/00275/Bike-Sharing-Dataset.zip\n",
       "archive.ics.uci.edu (archive.ics.uci.edu) をDNSに問いあわせています... 128.195.10.252\n",
       "archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443 に接続しています... 接続しました。\n",
-      "HTTP による接続要求を送信しました、応答を待っています... 200 OK\n",
-      "長さ: 279992 (273K) [application/x-httpd-php]\n",
-      "`Bike-Sharing-Dataset.zip' に保存中\n",
+      "HTTP による接続要求を送信しました、応答を待っています... 404 Not Found\n",
+      "2023-06-08 22:13:09 エラー 404: Not Found。\n",
       "\n",
-      "Bike-Sharing-Datase 100%[===================>] 273.43K   438KB/s    in 0.6s    \n",
-      "\n",
-      "2023-02-18 06:36:33 (438 KB/s) - `Bike-Sharing-Dataset.zip' へ保存完了 [279992/279992]\n",
-      "\n",
-      "  inflating: hour.csv                \n"
+      "  End-of-central-directory signature not found.  Either this file is not\n",
+      "  a zipfile, or it constitutes one disk of a multi-part archive.  In the\n",
+      "  latter case the central directory and zipfile comment will be found on\n",
+      "  the last disk(s) of this archive.\n",
+      "unzip:  cannot find zipfile directory in one of Bike-Sharing-Dataset.zip or\n",
+      "        Bike-Sharing-Dataset.zip.zip, and cannot find Bike-Sharing-Dataset.zip.ZIP, period.\n",
+      "Archive:  Bike-Sharing-Dataset.zip\n"
      ]
     }
    ],
@@ -789,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -889,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1159,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1201,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1228,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1268,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1300,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1334,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1392,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1632,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1670,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1697,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1730,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1788,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
